Fix layout issues with Portal component

--- a/src/pages/app/navbar/NavBar.module.scss
+++ b/src/pages/app/navbar/NavBar.module.scss
@@ -54,8 +54,6 @@
 }
 
 .tabContainer {
-    @include position(0, 0, 0, 0);
-    position: absolute;
     transition: all 0.3s;
     transform-origin: left center;
     transform: scale(0.99);
