--- a/src/pages/app/navbar/tabs/users/Users.module.scss
+++ b/src/pages/app/navbar/tabs/users/Users.module.scss
@@ -6,6 +6,6 @@
 
 .table {
     --grid-columns: 1.5em 1.5em 1em 0.5fr 1fr 0.35fr 0.35fr 1.5em;
-    max-height: calc(100% - 3.5em);
+    max-height: calc(100% - 3.75em);
     flex-grow: 1;
 }
